:bug: dropzone should now work on mobile too without any rotation

--- a/style-helpers/form.scss
+++ b/style-helpers/form.scss
@@ -160,6 +160,87 @@
 				}
 			}
 		}
+
+		/** Dropzone **/
+		.dropzone {
+			.dropzone-placeholder {
+				margin-top: 16px;
+				height: 144px;
+				border: 1px dashed $secondaryTextColor;
+				position: relative;
+				cursor: pointer;
+
+				&:hover {
+					border-color: $primaryColor;
+					background-color: rgba($primaryColor, 0.08);
+				}
+
+				svg {
+					position: absolute;
+					top: -16px;
+					left: calc(50% - 16px);
+					width: 32px;
+					height: 32px;
+
+					circle {
+						fill: $primaryColor;
+					}
+				}
+			}
+		}
+
+		/** File Preview **/
+		.file-preview {
+			margin-top: 16px;
+			position: relative;
+			padding: 8px;
+
+			img {
+				max-width: 100%;
+				max-height: 45vh;
+			}
+
+			svg {
+				position: absolute;
+				top: -16px;
+				right: -16px;
+				width: 32px;
+				height: 32px;
+
+				circle {
+					fill: $primaryColor;
+				}
+			}
+
+			// For image uploading on mobile
+			.rotate-90 {
+				transform: rotate(90deg);
+			}
+
+			.rotate-180 {
+				transform: rotate(180deg);
+			}
+
+			.rotate-270 {
+				transform: rotate(270deg);
+			}
+
+			.flip {
+				transform: scaleX(-1);
+			}
+
+			.flip-and-rotate-90 {
+				transform: rotate(90deg) scaleX(-1);
+			}
+
+			.flip-and-rotate-180 {
+				transform: rotate(180deg) scaleX(-1);
+			}
+
+			.flip-and-rotate-270 {
+				transform: rotate(270deg) scaleX(-1);
+			}
+		}
 	}
 
 	// Form Error
